@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#2469] Feature: Allow additional keys for models in the mappers
 - [#3524] Fix: VisibilityTree::makeNodesVisible needs to check the existence of nodes
 - [#3518] Fix: oelib_db::count should also accept joined tables
 - [#3516] Feature: Extend oelib_db::selectSingle to accept orderBy and offset
